--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     }
 </script>
 <script src="//unpkg.com/docsify-footer-enh/dist/docsify-footer-enh.min.js"></script>
+<script src="//cdn.jsdelivr.net/npm/docsify-copy-code/dist/docsify-copy-code.min.js"></script>
 
 </body>
 </html>
