--- a/zh_CN/index.html
+++ b/zh_CN/index.html
@@ -40,8 +40,8 @@
    <script>
     window.$docsify = {
      footer: {
-       copy: '<span>Hosted By <a href="https://pages.github.com/">Github Pages</a> | Powered By <a href="https://docsify.js.org/">docsify</a> | CDN By <a href="https://www.cloudflare.com/">Cloudflare</a></span>',
-       auth: ' <br><strong><a href="https://github.com/dm192" target="_blank">Dormant</a></strong>',
+       copy: '<span>由<a href="https://pages.github.com/">Github Pages</a>托管 | 由<a href="https://docsify.js.org/">docsify</a>驱动 | 由<a href="https://www.cloudflare.com/">Cloudflare</a>提供CDN</span>',
+       auth: ' <br>本页使用 GPLv3 开源协议',
        pre: '<hr/>',
        style: 'font-size: 18px; text-align: center;',
      },
