--- a/en_US/index.html
+++ b/en_US/index.html
@@ -17,6 +17,9 @@
        /* --theme-hue: 325; */
      }
    </style>
+   <!-- Google Ads-->
+   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4410363722460548"
+     crossorigin="anonymous"></script>
 </head>
 <body>
    <div id="app"></div>
